@@ -490,6 +490,9 @@ DECODER_LIBS = \
 
 DECODER_SRC = \
 	src/decoder/pcm_decoder_plugin.c \
+	src/decoder/dsdiff_decoder_plugin.c \
+	src/decoder/dsdiff_decoder_plugin.h \
+	src/dsd2pcm/dsd2pcm.c src/dsd2pcm/dsd2pcm.h \
 	src/decoder_buffer.c \
 	src/decoder_plugin.c \
 	src/decoder_list.c
