@@ -13,6 +13,7 @@ ver 0.17 (2011/??/??)
   - ffmpeg: drop support for pre-0.5 ffmpeg
   - ffmpeg: support libavformat 0.7
   - oggflac: delete this obsolete plugin
+  - dsdiff: new decoder plugin
 * output:
   - httpd: support for streaming to a DLNA client
   - osx: allow user to specify other audio devices
